apps/trove/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: trove-nginx
spec:
  loadBalancerIP: 192.168.1.6
  ports:
    - port: 80
  selector:
    app: trove-nginx
  type: LoadBalancer
