apps/trove/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trove-nginx
  annotations:
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.authelia.svc.cluster.local:9091/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.hubbe.club?rm=$request_method"
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
    # rate limiting zone
    nginx.ingress.kubernetes.io/configuration-snippet: "limit_req zone=trove burst=5;"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - trove.hubbe.club
  rules:
    - host: trove.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trove-nginx
                port:
                  number: 80
